[tool.poetry]
name = "hacker-news-hiring"
version = "0.1.0"
description = "A script that scans the Hacker News \"Who is hiring?\" post for relevant job postings"
authors = ["Pramod Jacob <pramod@prefect.io>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.scripts]
find-jobs = "hacker_news_hiring.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
